SERVER-99773 Fix pushdown of group stage for TS queries in sharded clusters (#33407)

GitOrigin-RevId: 391be899f275cd7116c7360f9f9a1c4b67ab3ecd